Screenshot Functionality Finished, multiple monitors screenshots with overlay now work.

--- a/src/renderer/overlay.html
+++ b/src/renderer/overlay.html
@@ -16,6 +16,7 @@
         /* Optional: slight dimming of the screen */
         /* background-color: rgba(0,0,0,0.05); */
         position: relative; /* For positioning the selection box */
+        background-color: rgba(0, 0, 0, 0.2);
       }
       #selection-box {
         position: absolute;
